syntax = "proto3";

option java_package = "com.mju.csmoa";
option java_multiple_files = true;

message JwtTokenInfo {
    int64 user_id = 1;
    string access_token = 2;
    string refresh_token = 3;
}